# xdg-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  index.html  search-index.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/std/error/: trait.Error.js
src/: error.rs  lib.rs
src/xdg/: error.rs.html  lib.rs.html
xdg/: fn.get_cache_home.html  fn.get_cache_home_from_env.html  fn.get_config_dirs.html  fn.get_config_dirs_from_env.html  fn.get_config_home.html  fn.get_config_home_from_env.html  fn.get_data_dirs.html  fn.get_data_dirs_from_env.html  fn.get_data_home.html  fn.get_data_home_from_env.html  fn.get_runtime_dir.html  fn.get_runtime_dir_from_env.html  index.html  sidebar-items.js  stability.html  stability.json
xdg/error/: enum.ErrorKind.html  enum.XdgError.html  index.html  sidebar-items.js  struct.Error.html  type.Result.html
