[package]

name = "xdg-rs"
version = "0.0.8"
authors = ["skullzzz <kiran.eighty9@gmail.com>"]
license = "MIT"
repository = "https://github.com/skullzzz/xdg-rs"
documentation = "http://skullzzz.github.io/xdg-rs/xdg/index.html"
keywords = ["xdg"]
readme = "README.md"
description = "Library to help with the XDG basedir spec"

[lib]
name = "xdg"
