[package]

name = "xdg-rs"
version = "0.1.2"
authors = ["skullzzz <kiran.eighty9@gmail.com>"]
license = "MIT"
repository = "https://github.com/skullzzz/xdg-rs"
documentation = "http://skullzzz.github.io/xdg-rs/xdg/index.html"
keywords = ["xdg", "basedir"]
readme = "README.md"
description = "Library to help with the XDG basedir spec"

[lib]
name = "xdg"

[features]
nightly = []
